force-app/main/default/objects/Commission__c/fields/Actual_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Actual_Commissions__c</fullName>
    <formula>Total_Delivered_Amount__c *  Commission_Percentage__c *  Opportunity_Split_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>