force-app/main/default/objects/Commission__c/fields/Estimated_Commission_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Commission_Opportunity__c</fullName>
    <formula>Opportunity__r.Probability *  Opportunity__r.Amount *  Commission_Percentage__c *  Opportunity_Split_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Commission - Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>