force-app/main/default/objects/Commission__c/fields/Opportunity_Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split_Percentage__c</fullName>
    <label>Opportunity Split Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>