force-app/main/default/objects/Commission__c/fields/Projected_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Projected_Commissions__c</fullName>
    <formula>Total_Ordered_Amount__c *  Commission_Percentage__c *  Opportunity_Split_Percentage__c *  Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>