force-app/main/default/objects/Commission__c/fields/RVP_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>RVP_Commission_Amount__c</fullName>
    <formula>IF( Sales_Rep__r.Manager.Id =  Sales_Rep__r.Id , 0,  Opportunity__r.Probability *  Opportunity_Split_Percentage__c *  Total_Ordered_Amount__c *  Sales_Rep__r.Manager.RVP_Commission_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVP Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>