force-app/main/default/objects/Commission__c/fields/Total_Ordered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered_Amount__c</fullName>
    <label>Total Ordered Amount</label>
    <summarizedField>Booked_Commission__c.Total_Ordered_Amount__c</summarizedField>
    <summaryForeignKey>Booked_Commission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>